--- a/package.json
+++ b/package.json
@@ -4,13 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^4.21.2"
-  }
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/oluwaniyiakin/CSE-314-project-1.git"
+  },
+  "bugs": {
+    "url": "https://github.com/oluwaniyiakin/CSE-314-project-1/issues"
+  },
+  "homepage": "https://github.com/oluwaniyiakin/CSE-314-project-1#readme"
 }
+
