--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "cse-314-project-1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -29,4 +30,3 @@
   },
   "homepage": "https://github.com/oluwaniyiakin/CSE-314-project-1#readme"
 }
-
